# mash

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: callbacks.rs  cli.rs  completion.rs  console.rs  control_commands.rs  display_names.rs  host_syntax.rs  input.rs  main.rs  pty_spawn.rs  shell.rs  shell_manager.rs  signals.rs
